--- a/app/src/main/res/layout/activity_new_donation.xml
+++ b/app/src/main/res/layout/activity_new_donation.xml
@@ -124,7 +124,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="2dp">
+        android:layout_marginTop="2dp"
+        android:id="@+id/required">
         <RadioButton android:id="@+id/yes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
