--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/textbox"
         android:drawablePadding="10dp"
         android:hint="Name:"
+        android:singleLine="true"
         android:paddingLeft="20dp"
         android:layout_marginTop="100dp"
         />
@@ -27,6 +28,7 @@
         android:id="@+id/phoneNumber"
         android:paddingLeft="20dp"
         android:drawablePadding="10dp"
+        android:singleLine="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/name"
         android:layout_marginTop="15dp"
@@ -74,6 +76,7 @@
         android:drawablePadding="10dp"
         android:hint="Email:"
         android:paddingLeft="20dp"
+        android:singleLine="true"
         android:layout_marginTop="20dp"
         android:layout_below="@id/radioGroup"
         />
@@ -87,6 +90,7 @@
         android:hint="Password:"
         android:paddingLeft="20dp"
         android:layout_marginTop="20dp"
+        android:singleLine="true"
         android:layout_below="@id/Email"
         />
 
