--- a/app/src/main/res/layout/activity_avaliable_donations.xml
+++ b/app/src/main/res/layout/activity_avaliable_donations.xml
@@ -12,11 +12,13 @@
         android:id="@+id/front_page_back_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_margin="15dp"
-        android:src="@drawable/backingicon"
-        android:background="@color/lightgrey"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_toLeftOf="@id/profileButton"
-        />
+        android:background="@color/lightgrey"
+        android:src="@drawable/backingicon" />
 
 
     <TextView
@@ -39,13 +41,14 @@
             android:layout_centerHorizontal="true"
             />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/donationRecycler"
+        android:id="@+id/allDonationRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/DonationList"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginBottom="12dp" />
+        android:layout_marginBottom="12dp"
+        tools:listitem="@layout/item_layout"/>
 
 </RelativeLayout>
